Closed
Bug 1079090
Opened 5 years ago
Closed 5 years ago
Coerce the argument passed to Object.getPrototypeOf using ToObject
Categories
(Core :: JavaScript: Standard Library, defect)
Core
JavaScript: Standard Library
Not set
Tracking
()
RESOLVED
FIXED
mozilla35
People
(Reporter: 446240525, Assigned: 446240525)
References
Details
(Keywords: dev-doc-complete, Whiteboard: [DocArea=JS])
Attachments
(1 file)
5.14 KB,
patch
|
till
:
review+
|
Details | Diff | Splinter Review |
js> Object.getPrototypeOf("foo") TypeError: "foo" is not an object // should return `String.prototype` in ES6
Attachment #8500874 -
Flags: review?(till)
Comment 2•5 years ago
|
||
Comment on attachment 8500874 [details] [diff] [review] bug-1079090.patch Review of attachment 8500874 [details] [diff] [review]: ----------------------------------------------------------------- Nice!
Attachment #8500874 -
Flags: review?(till) → review+
Comment 4•5 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/55b7368ee7f8
Keywords: checkin-needed
Comment 5•5 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/55b7368ee7f8
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in
before you can comment on or make changes to this bug.
Description
•