Bug 1079090 - Coerce the argument passed to Object.getPrototypeOf using ToObject. r=till